# ToolHunt

./: Dockerfile  README.md  ToolHunt_In_colab.ipynb  app.py  pyproject.toml  requirements.txt  toolhunt_in_colab.py  update_database.py
backend/: hybrid_search.py  main.py  semantic_search.py
backend/database/: tool_list_database.csv  tools.db
backend/faiss_index/: index.pkl
templates/: index.html
